--- a/package.json
+++ b/package.json
@@ -116,9 +116,13 @@
     "hammerjs": "2.0.8",
     "jszip": "3.7.1",
     "mathjax": "2.7.7",
+    "mini-css-extract-plugin": "^2.6.1",
     "moment": "^2.29.4",
+    "natives": "^1.1.6",
     "nl.kingsquare.cordova.background-audio": "1.0.1",
+    "node-sass": "^7.0.3",
     "rxjs": "6.5.5",
+    "sass": "^1.55.0",
     "ts-md5": "1.2.7",
     "tslib": "2.3.1",
     "zone.js": "0.10.3"
@@ -137,7 +141,9 @@
     "@angular/compiler-cli": "10.0.14",
     "@angular/language-service": "10.0.14",
     "@ionic/angular-toolkit": "2.3.3",
+    "@ionic/app-scripts": "^3.2.4",
     "@ionic/cli": "6.19.0",
+    "@ionic/lab": "3.2.15",
     "@types/faker": "5.1.3",
     "@types/node": "12.12.64",
     "@types/resize-observer-browser": "0.1.5",
@@ -147,7 +153,7 @@
     "check-es-compat": "1.1.1",
     "cordova-plugin-androidx-adapter": "1.1.3",
     "cordova-plugin-screen-orientation": "^3.0.2",
-    "cross-env": "7.0.3",
+    "cross-env": "^7.0.3",
     "eslint": "7.25.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-header": "3.1.1",
