--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "moodlemobile",
-  "version": "4.0.2",
-  "description": "The official app for Moodle.",
+  "name": "ducislanguagemobile",
+  "version": "1.0.12",
+  "description": "Ducis Langauage",
   "author": {
-    "name": "Moodle Pty Ltd.",
-    "email": "mobile@moodle.com"
+    "name": "Skillheads",
+    "email": "navin@skillheads.in"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/moodlehq/moodleapp.git"
+    "url": "https://github.com/PankajWagh/ducismobile.git"
   },
   "license": "Apache-2.0",
   "licenses": [
@@ -45,6 +45,7 @@
     "@angular/platform-browser": "10.0.14",
     "@angular/platform-browser-dynamic": "10.0.14",
     "@angular/router": "10.0.14",
+    "@capacitor/core": "4.4.0",
     "@ionic-native/badge": "5.33.0",
     "@ionic-native/camera": "5.33.0",
     "@ionic-native/chooser": "5.33.0",
@@ -87,7 +88,6 @@
     "chart.js": "2.9.4",
     "com-darryncampbell-cordova-plugin-intent": "2.2.0",
     "cordova": "11.0.0",
-    "cordova-android": "10.1.1",
     "cordova-clipboard": "1.3.0",
     "cordova-ios": "6.2.0",
     "cordova-plugin-add-swift-support": "2.0.2",
@@ -109,20 +109,23 @@
     "cordova-plugin-statusbar": "3.0.0",
     "cordova-plugin-wkuserscript": "1.0.1",
     "cordova-plugin-wkwebview-cookies": "1.0.1",
+    "cordova-res": "^0.15.4",
     "cordova-sqlite-storage": "6.0.0",
     "cordova.plugins.diagnostic": "6.1.1",
     "core-js": "3.9.1",
     "es6-promise-plugin": "4.2.2",
+    "gradlew": "0.0.1-security",
+    "gulp-sass": "^5.1.0",
     "hammerjs": "2.0.8",
+    "ionic": "^5.4.16",
     "jszip": "3.7.1",
     "mathjax": "2.7.7",
     "mini-css-extract-plugin": "^2.6.1",
     "moment": "^2.29.4",
     "natives": "^1.1.6",
     "nl.kingsquare.cordova.background-audio": "1.0.1",
-    "node-sass": "^7.0.3",
     "rxjs": "6.5.5",
-    "sass": "^1.55.0",
+    "sass": "^1.56.0",
     "ts-md5": "1.2.7",
     "tslib": "2.3.1",
     "zone.js": "0.10.3"
@@ -140,6 +143,7 @@
     "@angular/compiler": "10.0.14",
     "@angular/compiler-cli": "10.0.14",
     "@angular/language-service": "10.0.14",
+    "@capacitor/cli": "4.4.0",
     "@ionic/angular-toolkit": "2.3.3",
     "@ionic/app-scripts": "^3.2.4",
     "@ionic/cli": "6.19.0",
@@ -151,6 +155,7 @@
     "@typescript-eslint/eslint-plugin": "4.22.0",
     "@typescript-eslint/parser": "4.22.0",
     "check-es-compat": "1.1.1",
+    "cordova-android": "^10.1.2",
     "cordova-plugin-androidx-adapter": "1.1.3",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "cross-env": "^7.0.3",
@@ -186,8 +191,8 @@
   },
   "cordova": {
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ],
     "plugins": {
       "cordova-plugin-advanced-http": {
