--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "target": "es2015",
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
+	"skipLibCheck":true,				 
     "lib": [
       "es2018",
       "dom"
