--- a/moodle.config.json
+++ b/moodle.config.json
@@ -1,77 +1,27 @@
 {
     "app_id": "com.ducislanguage.mobile",
     "appname": "Ducis Langauage",
-    "versioncode": 10102,
-    "versionname": "1.0.102",
+    "versioncode": 10114,
+    "versionname": "1.0.014",
     "cache_update_frequency_usually": 420000,
     "cache_update_frequency_often": 1200000,
     "cache_update_frequency_sometimes": 3600000,
     "cache_update_frequency_rarely": 43200000,
     "default_lang": "en",
     "languages": {
-        "af": "Afrikaans",
-        "ar": "عربي",
-        "bg": "Български",
-        "ca": "Català",
-        "cs": "Čeština",
-        "da": "Dansk",
-        "de": "Deutsch",
-        "de-du": "Deutsch - Du",
-        "el": "Ελληνικά",
+      
         "en": "English",
-        "en-us": "English - United States",
-        "es": "Español",
-        "es-mx": "Español - México",
-        "eu": "Euskara",
-        "fa": "فارسی",
-        "fi": "Suomi",
-        "fr": "Français",
-        "gl": "Galego",
-        "he": "עברית",
-        "hi": "हिंदी",
-        "hr": "Hrvatski",
-        "hsb": "Hornjoserbsski",
-        "hu": "magyar",
-        "hy": "Հայերեն",
-        "id": "Indonesian",
-        "it": "Italiano",
-        "ja": "日本語",
-        "km": "ខ្មែរ",
-        "kn": "ಕನ್ನಡ",
-        "ko": "한국어",
-        "lo": "ລາວ",
-        "lt": "Lietuvių",
-        "lv": "Latviešu",
-        "mn": "Монгол",
-        "mr": "मराठी",
-        "nl": "Nederlands",
-        "no": "Norsk - bokmål",
-        "pl": "Polski",
-        "pt": "Português - Portugal",
-        "pt-br": "Português - Brasil",
-        "ro": "Română",
-        "ru": "Русский",
-        "sl": "Slovenščina",
-        "sr-cr": "Српски",
-        "sr-lt": "Srpski",
-        "sv": "Svenska",
-        "tg": "Тоҷикӣ",
-        "tr": "Türkçe",
-        "uk": "Українська",
-        "uz": "O'zbekcha",
-        "vi": "Vietnamese",
-        "zh-cn": "简体中文",
-        "zh-tw": "正體中文"
+     
     },
     "wsservice": "moodle_mobile_app",
     "demo_sites": {
         "student": {
-            "url": "https://school.moodledemo.net",
+            "url": "https://learning.ducislanguage.com/",
             "username": "student",
             "password": "moodle"
         },
         "teacher": {
-            "url": "https://school.moodledemo.net",
+            "url": "https://learning.ducislanguage.com/",
             "username": "teacher",
             "password": "moodle"
         }
@@ -86,10 +36,10 @@
     "sitename": "Ducis Language",
     "multisitesdisplay": "",
     "sitefindersettings": {},
-    "onlyallowlistedsites": false,
+    "onlyallowlistedsites": true,
     "skipssoconfirmation": false,
     "forcedefaultlanguage": false,
-    "privacypolicy": "https://moodle.net/moodle-app-privacy/",
+    "privacypolicy": "https://ducisgroup.com/index.php/privacy-policy-dg/",
     "notificoncolor": "#f98012",
     "enableanalytics": false,
     "enableonboarding": true,
@@ -98,7 +48,7 @@
     "ioswebviewscheme": "moodleappfs",
     "appstores": {
         "android": "com.ducislanguage.mobile",
-        "ios": "id633359593"
+        "ios": ""
     },
     "wsrequestqueuelimit": 10,
     "wsrequestqueuedelay": 100,
