--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ducislanguagemobile",
-  "version": "1.0.14",
+  "version": "1.0.15",
   "description": "Ducis Langauage",
   "author": {
     "name": "Skillheads",
@@ -155,7 +155,6 @@
     "@typescript-eslint/eslint-plugin": "4.22.0",
     "@typescript-eslint/parser": "4.22.0",
     "check-es-compat": "1.1.1",
-    "cordova-android": "^10.1.2",
     "cordova-plugin-androidx-adapter": "1.1.3",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "cross-env": "^7.0.3",
@@ -191,8 +190,7 @@
   },
   "cordova": {
     "platforms": [
-      "ios",
-      "android"
+      "ios"
     ],
     "plugins": {
       "cordova-plugin-advanced-http": {
@@ -212,9 +210,7 @@
         "ANDROID_PATHPREFIX": "/"
       },
       "cordova-plugin-device": {},
-      "cordova-plugin-file-opener2": {
-        "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      },
+      "cordova-plugin-file-opener2": {},
       "cordova-plugin-geolocation": {
         "GPS_REQUIRED": "false"
       },
